my 1st change in index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <header><h1>Hello it is my web app</h1></header>
     <section>About me</section>
+    <section>My hobby</section>
   </body>
 </html>
