more sections in index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header><h1>Hello it is my web app</h1></header>
     <section>About me</section>
     <section>My hobby</section>
+    <section>My love to tech</section>
   </body>
 </html>
